--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -1,23 +1,35 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <!-- Brand/logo -->
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="{{ path('app_home') }}">Logo</a>
 
     <!-- Links -->
     <ul class="navbar-nav">
         <li class="nav-item">
-            <a class="nav-link" href="/">Accueil</a>
+            <a class="nav-link" href="{{ path('app_home') }}">Accueil</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/explications">Explications</a>
+            <a class="nav-link" href="{{ path('app_explication') }}">Explications</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/regles">Régles</a>
+            <a class="nav-link" href="{{ path('app_regles') }}">Régles</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/game/0">Jouer</a>
+            <a class="nav-link" href="{{ path('app_game', {'id': 0}) }}">Jouer</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/game/list">Liste des Mondes</a>
+            <a class="nav-link" href="{{ path('app_home') }}">Liste des Mondes</a>
+        </li>
+
+        {% if is_granted("IS_AUTHENTICATED_FULLY") %}
+            <a class="nav-link" href="{{ path('logout') }}">Se déconnecter</a>
+
+        {% else %}
+            <a class="nav-link" href="{{ path('login') }}">Se connecter</a>
+
+
+
+        {%endif%}
+        <li class="nav-item">
         </li>
     </ul>
 </nav>
