--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -20,16 +20,20 @@
             <a class="nav-link" href="{{ path('app_home') }}">Liste des Mondes</a>
         </li>
 
+
         {% if is_granted("IS_AUTHENTICATED_FULLY") %}
             <a class="nav-link" href="{{ path('logout') }}">Se déconnecter</a>
-
         {% else %}
             <a class="nav-link" href="{{ path('login') }}">Se connecter</a>
-
-
-
         {%endif%}
         <li class="nav-item">
+
+
+
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ path('sign') }}">Créer un compte</a>
+
         </li>
     </ul>
 </nav>
