modification de la liste des jeux en cours avec liaison avec compte du joueur

--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -17,7 +17,7 @@
             <a class="nav-link" href="{{ path('app_game', {'id': 0}) }}">Jouer</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_home') }}">Liste des Mondes</a>
+            <a class="nav-link" href="{{ path('app_list_game') }}">Liste des Mondes</a>
         </li>
 
 
