--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,12 @@
             {% block slide %}
                 {% include 'slide.html.twig' %}
             {% endblock %}
-
+            {# pass a string argument to get only the messages of that type #}
+            {% for message in app.flashes('notice') %}
+                <div class="alert alert-notice">
+                    {{ message }}
+                </div>
+            {% endfor %}
 
 
 
