templating sur les pages de l'espace user

--- a/templates/sign.html.twig
+++ b/templates/sign.html.twig
@@ -1,5 +1,13 @@
+{% extends "base.html.twig" %}
+
+{% block title %}Création d'un compte à JDRS{% endblock %}
+
+
+{% block body %}
 <h1>création d'un compte</h1>
 
 {{ form_start(form) }}
 {{ form_widget(form) }}
 {{ form_end(form) }}
+
+{% endblock %}
