--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
+        //TODO charger uniquement sur les pages nécessitant un texte enrichi
         <script src="/tinymce/js/tinymce/tinymce.min.js"></script>
         <script>tinymce.init({
                 selector:'textarea',
