--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -1,13 +1,22 @@
 {# templates/security/login.html.twig #}
 {# ... you will probably extend your base template, like base.html.twig #}
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-{% endif %}
+{% extends "base.html.twig" %}
 
 
 
 
+{% block title %}Connexion à JDRS{% endblock %}
+ {% block body %}
+
+     <h1>Connectez-vous</h1>
+     {% if error %}
+         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+     {% endif %}
+
+
+
+<div class="row">
 <form action="{{ path('login') }}" method="post">
     <label for="username">Username:</label>
     <input type="text" id="username" name="_username" value="{{ last_username }}" />
@@ -23,3 +32,6 @@
 
     <button type="submit">login</button>
 </form>
+
+
+ {% endblock %}
