--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -16,22 +16,25 @@
 
 
 
-<div class="row">
-<form action="{{ path('login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+<div class="row justify-content-center">
+    <div class="">
+    <form action="{{ path('login') }}" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="_username" value="{{ last_username }}" />
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="_password" />
 
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
+        {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+        #}
 
-    <button type="submit">login</button>
-</form>
+        <button type="submit">login</button>
+    </form>
+    </div>
+</div>
 
 
  {% endblock %}
