--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,8 +43,27 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 
+.cadre{
 
-/*Home*/
+    border: 1px solid #c1c1c1;
+    background-color: #29282E;
+    margin: 0px;
+    margin-top: 15px;
+    padding-bottom: 20px;
+}
+.cadre label{
+
+    color: white;;
+}
+
+.cadre h1{
+
+    color: white;
+
+}
+/*
+**Home
+***************************/
 
 
 
@@ -126,7 +145,9 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-/*Game*/
+/**
+*Game*
+*******************/
 .story{
     background-color: rgba(128, 128, 128, 0.76);
     border: 1px solid white;
@@ -195,4 +216,17 @@ form{
 .far,.fas{
 
     font-size: 21px;
+}
+
+/*
+*Espace Utilisateur
+
+******************************/
+
+#user input {
+    color: grey;
+}
+
+#user label{
+width:35%;
 }
