--- a/templates/sign.html.twig
+++ b/templates/sign.html.twig
@@ -4,10 +4,19 @@
 
 
 {% block body %}
-<h1>création d'un compte</h1>
 
-{{ form_start(form) }}
-{{ form_widget(form) }}
-{{ form_end(form) }}
 
+
+    <div class="row justify-content-center cadre">
+
+<div class="">
+
+    <h1>création d'un compte</h1>
+
+        {{ form_start(form) }}
+        {{ form_widget(form) }}
+        {{ form_end(form) }}
+</div>
+
+    </div>
 {% endblock %}
