Creation du formualaire pour envoyer les CSV

--- a/templates/import.html.twig
+++ b/templates/import.html.twig
@@ -1,1 +1,14 @@
+{% extends "base.html.twig" %}
+
+
+ {% block body %}
+
+
 <h1>import des fichiers CSV</h1>
+
+{{ form_start(form) }}
+{{ form_widget(form) }}
+{{ form_end(form) }}
+
+
+ {% endblock %}
