Ajout d'un defilement automatique sur la zone story

--- a/templates/game.html.twig
+++ b/templates/game.html.twig
@@ -52,3 +52,9 @@
 </div>
 
  {% endblock %}
+
+            {% block javascripts %}
+                <script src="{{ asset('build/gamejs.js') }}"></script>
+
+
+            {% endblock %}
